fix the grid layout bug

--- a/admin-page/src/app/display-page/display-page.component.scss
+++ b/admin-page/src/app/display-page/display-page.component.scss
@@ -6,12 +6,12 @@
   }
   .display__container__items {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    @media screen and (max-width: 550px) {
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    }
     gap: 2rem;
     .display__container__items__card {
-      max-width: 18rem;
-      width: 100%;
-      //   text-align: center;
       padding: 0.5rem;
       background-color: #ffffff;
       border-radius: 0.3rem;
@@ -19,8 +19,6 @@
       flex-direction: column;
       gap: 1rem;
       padding: 1rem;
-      //   align-items: center;
-      //   justify-content: center;
       box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
       .card__title {
         ul {
